scrollbar bug fix

--- a/public/global.css
+++ b/public/global.css
@@ -10,7 +10,12 @@ body {
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 	background: #f8f8f8;
+	scrollbar-width: none;
 	overflow: hidden;
+}
+
+body::-webkit-scrollbar {
+	display: none;
 }
 
 a {
